Revert "fix: scale sphere perspective proportionally on mobile"
This reverts commit c5740ec5b82201c0406b60b668bfa72ae12ff1f6.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -489,7 +489,6 @@ footer {
     .sphere-container {
         width: 180px;
         height: 180px;
-        perspective: 166px;
     }
 
     .sphere,
@@ -574,7 +573,6 @@ footer {
     .sphere-container {
         width: 120px;
         height: 120px;
-        perspective: 111px;
     }
 
     .sphere,
